--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -1,87 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Jersey Skeleton</title>
-    <meta charset='utf-8'>
-    <!-- jQuery -->
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
-    <!-- Code local -->
-    <script src="all.js"></script>
+<script src="jquery-3.3.1.js"></script>
+<script src="menu.js"></script>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="style.css">
+<title>Coach Your Emotions</title>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Javascript (Single Page Application)</a></li>
-        </ul>
-    </div>
-</nav>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                <h1>Utilisateur :</h1>
-                <input type="text" name="userdb" id="user" placeholder="Nom ?" class="form-control"/>
-                <input type="text" name="user" id="alias" placeholder="Surnom ?" class="form-control"/>
-                <input type="text" name="email" id="email" placeholder="Email ?" class="form-control"/>
-                <input type="password" name="user" id="passwd" placeholder="Mot de passe ?" class="form-control"/>
-            </div>
-            <div class="btn-group" role="group">
-                <button type="button" id="get" class="btn btn-default">Lire</button>
-                <button type="button" id="post" class="btn btn-primary">Sauver</button>
-                <button type="button" id="list" class="btn btn-warning">Lister</button>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <h1>S'identifier :</h1>
-            <div id="login_form">
-                <input type="text" name="user" id="userlogin" placeholder="Login" class="form-control"/>
-                <input type="password" name="password" id="passwdlogin" placeholder="Password" class="form-control"/>
-                <br/>
-                <button id="login" class="btn btn-default">Login</button>
-                <br/>
-            </div>
-            <button id="profile" class="btn btn-default">Profile</button>
-        </div>
-    </div>
-    <div class="row" style="margin-top: 20px;">
-    </div>
-    <div class="row" style="margin-top: 1em;">
-        <div class="panel panel-info">
-            <div class="panel-heading">Réponse</div>
-            <div class="panel-body" id="reponse">
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript">
-			$(document).ready(function() {
-				$("#get").click(function () {
-				    getUser($('#user').val(), $('#alias').val())
-				    });
-				$("#post").click(function () {
-                    postUser(
-                        $('#user').val(),
-                        $('#alias').val(),
-                        $('#email').val(),
-                        $('#passwd').val())});
-				$("#list").click(function () {
-				    listUsers()
-				    });
-				$("#login").click(function () {
-				    login();
-				    });
-				$("#profile").click(function () {
-				    profile()
-				    });
-			});
-
-    </script>
+<a href="login.html"><input type="button" value="login"/></a>
+<div>
+	<ul id="menu">
+		<li id="ressource"><a href="#">Ressource</a></li>
+		<li id="exercer"><a href="#">S'exercer</a></li>
+		<li id="espace"><a href="#">Mon espace</a></li>
+	</ul>
+</div>
+<div id="accordeon">
+	<h1 class="pRessource">Ressource</h1>
+	<section class="pRessource">
+		<header class="header">Présentation CNV</header>
+		<article>En Communication NonViolente nous focalisons notre attention sur quatre points :<br>
+Nous observons ce qui se passe réellement dans une situation donnée : qu’est-ce qui dans les paroles ou les actes d’autrui, contribue ou non à mon bien être ?<br>
+Puis, nous disons ce que nous ressentons en présence de ces faits : sommes-nous tristes, joyeux, inquiets, amusés, fâchés ?<br>
+Nous précisons les besoins à l’origine de ce(s) sentiment(s).<br>
+Nous finissons avec la quatrième composante, à savoir une demande précise et concrète.<br>
+<br>
+L’expression de l’observation<br>
+Pas de jugement ("bon", "mauvais", "bien" etc.)<br>
+Pas d’interprétation, de diagnostic ("elle est énervée", "elle crie" etc.)<br>
+Pas de généralisation ("toujours", "jamais", "les femmes" etc.)<br>
+Mesurable ("trop", "pas assez", "beaucoup", "peu" etc.)<br>
+Pas de pronostic ("tu vas être malade" etc.)<br>
+<br>
+L’expression du sentiment<br>
+Je parle de mon ressenti<br>
+Pas de "J'ai le sentiment que / de ..." etc.<br>
+Je parle de ce que je ressens (pas de ce que je ne ressens pas)<br>
+Pas de sentiment impliquant l'autre ("agressé", "obligé", "trahi", "rejeté", "ridiculisé" etc.)<br>
+Est-ce que j'ai une palette variée de sentiments ?<br>
+<br>
+L’expression du besoin<br>
+Éviter le besoin mélangé à une stratégie ("j'ai besoin que tu...")<br>
+Est-ce que je suis arrivé à un besoin universel ?<br>
+Est-ce que j'ai une palette variée et précise de besoins ?<br>
+<br>
+L’expression de la demande<br>
+J'exprime ce que je souhaite (ce que je ne souhaite pas)<br>
+Ma demande est facilement vérifiable<br>
+Ma demande est précise et en lien avec l'observation<br>
+Je suis prêt à ce qu'on dise "non" à ma demande<br>
+</article>
+	</section>
+	<section class="pRessource">
+		<header class="header">Liste des émotions</header>
+		<article>Une émotion</article>
+	</section>
+	</section>
+	<section class="pRessource">
+		<header class="header">Liste des sentiments</header>
+		<article>Un sentiment</article>
+	</section>
+</div>
+<div id="dExercice">
+	<h1 class="pExercice">S'exercer</h1>
+	<p class="pExercice">Section à venir !</p1>
+</div>
+<div id="dEspace">
+	<h1 class="pEspace">MonEspace</h1>	
+	<p class="pEspace">Section à venir !</p1>
+</div>
 </body>
 </html>
