--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -26,26 +26,26 @@ Puis, nous disons ce que nous ressentons en présence de ces faits : sommes-nous
 Nous précisons les besoins à l’origine de ce(s) sentiment(s).<br>
 Nous finissons avec la quatrième composante, à savoir une demande précise et concrète.<br>
 <br>
-L’expression de l’observation<br>
+<strong>L’expression de l’observation</strong><br>
 Pas de jugement ("bon", "mauvais", "bien" etc.)<br>
 Pas d’interprétation, de diagnostic ("elle est énervée", "elle crie" etc.)<br>
 Pas de généralisation ("toujours", "jamais", "les femmes" etc.)<br>
 Mesurable ("trop", "pas assez", "beaucoup", "peu" etc.)<br>
 Pas de pronostic ("tu vas être malade" etc.)<br>
 <br>
-L’expression du sentiment<br>
+<strong>L’expression du sentiment</strong><br>
 Je parle de mon ressenti<br>
 Pas de "J'ai le sentiment que / de ..." etc.<br>
 Je parle de ce que je ressens (pas de ce que je ne ressens pas)<br>
 Pas de sentiment impliquant l'autre ("agressé", "obligé", "trahi", "rejeté", "ridiculisé" etc.)<br>
 Est-ce que j'ai une palette variée de sentiments ?<br>
 <br>
-L’expression du besoin<br>
+<strong>L’expression du besoin</strong><br>
 Éviter le besoin mélangé à une stratégie ("j'ai besoin que tu...")<br>
 Est-ce que je suis arrivé à un besoin universel ?<br>
 Est-ce que j'ai une palette variée et précise de besoins ?<br>
 <br>
-L’expression de la demande<br>
+<strong>L’expression de la demande</strong><br>
 J'exprime ce que je souhaite (ce que je ne souhaite pas)<br>
 Ma demande est facilement vérifiable<br>
 Ma demande est précise et en lien avec l'observation<br>
