--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
 <script src="jquery-3.3.1.js"></script>
 <script src="menu.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="style.css">
 <title>Coach Your Emotions</title>
