--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -3,13 +3,30 @@
 <head>
 <script src="jquery-3.3.1.js"></script>
 <script src="menu.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <meta charset="utf-8" />
 <link rel="stylesheet" href="style.css">
 <title>Coach Your Emotions</title>
 </head>
 <body>
 <a href="login.html"><input type="button" value="login"/></a>
+
+<div class="container">
+  <div class="btn-group btn-group-justified">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary">Ressource</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary">S'exercer</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary">Mon espace</button>
+    </div>
+  </div>
+</div>
+
+<!--
 <div>
 	<ul id="menu">
 		<li id="ressource"><a href="#">Ressource</a></li>
@@ -17,6 +34,7 @@
 		<li id="espace"><a href="#">Mon espace</a></li>
 	</ul>
 </div>
+-->
 <div id="accordeon">
 	<h1 class="pRessource">Ressource</h1>
 	<section class="pRessource">
