--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -15,13 +15,13 @@
 <div class="container">
   <div class="btn-group btn-group-justified">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary">Ressource</button>
+      <button type="button" id="ressource" class="btn btn-primary">Ressource</button>
     </div>
     <div class="btn-group">
-      <button type="button" class="btn btn-primary">S'exercer</button>
+      <button type="button" id="exercer" class="btn btn-primary">S'exercer</button>
     </div>
     <div class="btn-group">
-      <button type="button" class="btn btn-primary">Mon espace</button>
+      <button type="button" id="espace" class="btn btn-primary">Mon espace</button>
     </div>
   </div>
 </div>
