--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -10,9 +10,8 @@
 <title>Coach Your Emotions</title>
 </head>
 <body>
-<a href="login.html"><input type="button" value="login"/></a>
 
-<div class="container">
+<!--<div class="container">
   <div class="btn-group btn-group-justified">
     <div class="btn-group">
       <button type="button" id="ressource" class="btn btn-primary">Ressource</button>
@@ -24,7 +23,23 @@
       <button type="button" id="espace" class="btn btn-primary">Mon espace</button>
     </div>
   </div>
-</div>
+</div>-->
+ <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">CoachYourEmotions</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li id="ressource"><a href="#">Ressource</a></li>
+      <li id="exercer"><a href="#">S'exercer</a></li>
+      <li id="espace"><a href="#">Mon espace</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav> 
 
 <!--
 <div>
