--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -1,108 +1,88 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-<script src="jquery-3.3.1.js"></script>
-<script src="menu.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<meta charset="utf-8" />
-<link rel="stylesheet" href="style.css">
-<title>Coach Your Emotions</title>
-</head>
-<body>
+  <head>
+    <script src="jquery-3.3.1.js"></script>
+    <script src="menu.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
+    <title>Coach Your Emotions</title>
+  </head>
+  <body>
 
-<!--<div class="container">
-  <div class="btn-group btn-group-justified">
-    <div class="btn-group">
-      <button type="button" id="ressource" class="btn btn-primary">Ressource</button>
-    </div>
-    <div class="btn-group">
-      <button type="button" id="exercer" class="btn btn-primary">S'exercer</button>
-    </div>
-    <div class="btn-group">
-      <button type="button" id="espace" class="btn btn-primary">Mon espace</button>
-    </div>
-  </div>
-</div>-->
- <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">CoachYourEmotions</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li id="ressource"><a href="#">Ressource</a></li>
-      <li id="exercer"><a href="#">S'exercer</a></li>
-      <li id="espace"><a href="#">Mon espace</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
-  </div>
-</nav> 
 
-<!--
-<div>
-	<ul id="menu">
-		<li id="ressource"><a href="#">Ressource</a></li>
-		<li id="exercer"><a href="#">S'exercer</a></li>
-		<li id="espace"><a href="#">Mon espace</a></li>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+	<div class="navbar-header">
+	  <a class="navbar-brand" href="#">CoachYourEmotions</a>
+	</div>
+	<ul class="nav navbar-nav">
+	  <li id="ressource"><a href="#">Ressource</a></li>
+	  <li id="exercer"><a href="#">S'exercer</a></li>
+	  <li id="espace"><a href="#">Mon espace</a></li>
 	</ul>
-</div>
--->
-<div id="accordeon">
-	<h1 class="pRessource">Ressource</h1>
-	<section class="pRessource">
-		<header class="header">Présentation CNV</header>
-		<article>En Communication NonViolente nous focalisons notre attention sur quatre points :<br>
-Nous observons ce qui se passe réellement dans une situation donnée : qu’est-ce qui dans les paroles ou les actes d’autrui, contribue ou non à mon bien être ?<br>
-Puis, nous disons ce que nous ressentons en présence de ces faits : sommes-nous tristes, joyeux, inquiets, amusés, fâchés ?<br>
-Nous précisons les besoins à l’origine de ce(s) sentiment(s).<br>
-Nous finissons avec la quatrième composante, à savoir une demande précise et concrète.<br>
-<br>
-<strong>L’expression de l’observation</strong><br>
--Pas de jugement ("bon", "mauvais", "bien" etc.)<br>
--Pas d’interprétation, de diagnostic ("elle est énervée", "elle crie" etc.)<br>
--Pas de généralisation ("toujours", "jamais", "les femmes" etc.)<br>
--Mesurable ("trop", "pas assez", "beaucoup", "peu" etc.)<br>
--Pas de pronostic ("tu vas être malade" etc.)<br>
-<br>
-<strong>L’expression du sentiment</strong><br>
--Je parle de mon ressenti<br>
--Pas de "J'ai le sentiment que / de ..." etc.<br>
--Je parle de ce que je ressens (pas de ce que je ne ressens pas)<br>
--Pas de sentiment impliquant l'autre ("agressé", "obligé", "trahi", "rejeté", "ridiculisé" etc.)<br>
--Est-ce que j'ai une palette variée de sentiments ?<br>
-<br>
-<strong>L’expression du besoin</strong><br>
--Éviter le besoin mélangé à une stratégie ("j'ai besoin que tu...")<br>
--Est-ce que je suis arrivé à un besoin universel ?<br>
--Est-ce que j'ai une palette variée et précise de besoins ?<br>
-<br>
-<strong>L’expression de la demande</strong><br>
--J'exprime ce que je souhaite (ce que je ne souhaite pas)<br>
--Ma demande est facilement vérifiable<br>
--Ma demande est précise et en lien avec l'observation<br>
--Je suis prêt à ce qu'on dise "non" à ma demande<br>
-</article>
-	</section>
-	<section class="pRessource">
-		<header class="header">Liste des besoins</header>
-		<article>Une émotion</article>
-	</section>
-	</section>
-	<section class="pRessource">
-		<header class="header">Liste des sentiments</header>
-		<article>Un sentiment</article>
-	</section>
+	<ul class="nav navbar-nav navbar-right">
+	  <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+	  <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+	</ul>
+      </div>
+    </nav> 
+
+
+    <div id="accordeon">
+      <h1 class="pRessource">Ressource</h1>
+      <section class="pRessource">
+	<header class="header">Présentation CNV</header>
+	<article>En Communication NonViolente nous focalisons notre attention sur quatre points :<br>
+	  Nous observons ce qui se passe réellement dans une situation donnée : qu’est-ce qui dans les paroles ou les actes d’autrui, contribue ou non à mon bien être ?<br>
+	  Puis, nous disons ce que nous ressentons en présence de ces faits : sommes-nous tristes, joyeux, inquiets, amusés, fâchés ?<br>
+	  Nous précisons les besoins à l’origine de ce(s) sentiment(s).<br>
+	  Nous finissons avec la quatrième composante, à savoir une demande précise et concrète.<br>
+	  <br>
+	  <strong>L’expression de l’observation</strong><br>
+	  -Pas de jugement ("bon", "mauvais", "bien" etc.)<br>
+	  -Pas d’interprétation, de diagnostic ("elle est énervée", "elle crie" etc.)<br>
+	  -Pas de généralisation ("toujours", "jamais", "les femmes" etc.)<br>
+	  -Mesurable ("trop", "pas assez", "beaucoup", "peu" etc.)<br>
+	  -Pas de pronostic ("tu vas être malade" etc.)<br>
+	  <br>
+	  <strong>L’expression du sentiment</strong><br>
+	  -Je parle de mon ressenti<br>
+	  -Pas de "J'ai le sentiment que / de ..." etc.<br>
+	  -Je parle de ce que je ressens (pas de ce que je ne ressens pas)<br>
+	  -Pas de sentiment impliquant l'autre ("agressé", "obligé", "trahi", "rejeté", "ridiculisé" etc.)<br>
+	  -Est-ce que j'ai une palette variée de sentiments ?<br>
+	  <br>
+	  <strong>L’expression du besoin</strong><br>
+	  -Éviter le besoin mélangé à une stratégie ("j'ai besoin que tu...")<br>
+	  -Est-ce que je suis arrivé à un besoin universel ?<br>
+	  -Est-ce que j'ai une palette variée et précise de besoins ?<br>
+	  <br>
+	  <strong>L’expression de la demande</strong><br>
+	  -J'exprime ce que je souhaite (ce que je ne souhaite pas)<br>
+	  -Ma demande est facilement vérifiable<br>
+	  -Ma demande est précise et en lien avec l'observation<br>
+	  -Je suis prêt à ce qu'on dise "non" à ma demande<br>
+	</article>
+      </section>
+      <section class="pRessource">
+	<header id="besoin" class="header">Liste des besoins</header>
+	<article>Une émotion</article>
+      </section>
+</section>
+<section class="pRessource">
+  <header id="sentiment" class="header">Liste des sentiments</header>
+  <article>Un sentiment</article>
+</section>
 </div>
 <div id="dExercice">
-	<h1 class="pExercice">S'exercer</h1>
-	<p class="pExercice">Section à venir !</p1>
+  <h1 class="pExercice">S'exercer</h1>
+  <p class="pExercice">Section à venir !</p>
 </div>
 <div id="dEspace">
-	<h1 class="pEspace">MonEspace</h1>	
-	<p class="pEspace">Section à venir !</p1>
+  <h1 class="pEspace">MonEspace</h1>	
+  <p class="pEspace">Section à venir !</p>
 </div>
 </body>
 </html>
