--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -73,7 +73,7 @@
 </section>
 <section class="pRessource">
   <header id="sentiment" class="header">Liste des sentiments</header>
-  <article>Un sentiment</article>
+  <article id="output"></article>
 </section>
 </div>
 <div id="dExercice">
