ca fonctionne le JSONNNNNNNNNNN

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -68,11 +68,11 @@
       </section>
       <section class="pRessource">
 	<header id="besoin" class="header">Liste des besoins</header>
-	<article>Une émotion</article>
+	<article id="outputBesoin"></article>
       </section>
       <section class="pRessource">
 	<header id="sentiment" class="header">Liste des sentiments</header>
-	<article id="output"></article>
+	<article id="outputSentiment"></article>
       </section>
     </div>
     <div id="dExercice">
