--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
   <head>
     <script src="jquery-3.3.1.js"></script>
-    <script src="menu.js"></script>
+    <script src="ressource.js"></script>
+    <script src="exercer.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8" />
