--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -105,7 +105,7 @@
       <section class="pRessource">
 	<header id="sentiment" class="header">Liste des sentiments</header>
 		
-			<article id="outputSentiment"></article>
+			<div id="accordeonSentiment"></div>
 		
       </section>
       </div>
