l'affichage relié a la base de donné des exo

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -110,24 +110,16 @@
       </section>
       </div>
     
-    <div id="pExercice">
+   	      <div id="pExercice">
       <h1 class="pExercice">S'exercer</h1>
-      <button type="button" class="pExercice btn btn-lg btn-block btn-primary">Exo Type N°1</button>
-      <br>
-      <button  type="button"  class="pExercice btn btn-lg btn-block btn-info">Exo Type N°2</button>
-      <br>
-      <button type="button" class="pExercice btn btn-lg btn-block btn-success">Exo Type N°3</button>
-      <br>
-      <button  type="button"  class="pExercice btn btn-lg btn-block btn-warning">Exo Type N°4</button>
-      <br>
-      <button  type="button"  class="pExercice btn btn-lg btn-block btn-danger">Exo Type N°5</button>
-      <!--
-	  <div class="pExercice" id= "1erExo">
-	    <article id ="outputExo">Voici un exercice pour s'entraîner<article>
-		<button type="button" class="pExercice btn btn-lg btn-block btn-danger" > COMMENCER</button>
-		<div>
-		  -->
+		<form id="formOutPut" class="pExercice"><form>
 
+		<!--
+		<div class="pExercice" id= "1erExo">
+			<article id ="outputExo">Voici un exercice pour s'entraîner<article>
+			<button type="button" class="pExercice btn btn-lg btn-block btn-danger" > COMMENCER</button>
+		<div>
+		-->
     </div>
     
     <div id="dEspace">
