--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -137,8 +137,8 @@
     </div>
       
     <div id="pAjoutSentiment">
-        <input type="text" name="sentimentdb" id="sentiment" placeholder="Libellé du sentiment ?" class="pAjoutSentiment"/>
-        <input type="text" name="sentimentdb" id="categorie" placeholder="Catégorie ?" class="pAjoutSentiment"/>
+        <input type="text" name="sentimentdb" id="nomSentiment" placeholder="Libellé du sentiment ?" class="pAjoutSentiment"/>
+        <input type="text" name="sentimentdb" id="categorieSentiment" placeholder="Catégorie ?" class="pAjoutSentiment"/>
         <button type="button" id="postSentiment" class="pAjoutSentiment btn btn-lg btn-block btn-success"> Ajouter le sentiment</button>
     </div>
       
