--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -5,6 +5,8 @@
     <script src="jquery-3.3.1.js"></script>
     <script src="ressource.js"></script>
     <script src="exercer.js"></script>
+    <script src="sign.js"></script>
+    <script src="login.js"></script>
     <script src="espace.js"></script>
 	<script src="ajoutAdmin.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -30,8 +32,8 @@
 	</ul>
 	
 	<ul class="nav navbar-nav navbar-right">
-	  <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-	  <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+	  <li><a href="sign"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+	  <li><a href="login"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
 	</ul>
 	
       </div>
