--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -28,12 +28,12 @@
 	  <li id="ressource"><a href="#">Ressource</a></li>
 	  <li id="exercer"><a href="#">S'exercer</a></li>
 	  <li id="espace"><a href="#">Mon espace</a></li>
-		<li id="AjoutAdmin"><a href="#">EspaceAdmin</a></li>
+	  <li id="AjoutAdmin"><a href="#">EspaceAdmin</a></li>
 	</ul>
 	
 	<ul class="nav navbar-nav navbar-right">
-	  <li><a href="sign"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-	  <li><a href="login"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+	  <li id="sign"><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+	  <li id="login"><a href="#"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
 	</ul>
 	
       </div>
@@ -126,7 +126,7 @@
 		-->
     </div>
     
-    <div id="dEspace">
+    <div id="pEspace">
       <h1 class="pEspace">MonEspace</h1>	
       <p class="pEspace">Section à venir !</p>
     </div>
