--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -164,6 +164,11 @@
         <input type="text" name="questiondb" id="correctionOui" placeholder="Phrase de réussite" class="pAjoutQuestion"/>
         <button type="button" id="postQuestion" class="pAjoutQuestion btn btn-lg btn-block btn-success"> Ajouter la question</button>
     </div>
+
+	<div id="pDeleteSentiment">
+        <input type="text" name="sentimentdb" id="idExo" placeholder="Numero de l'exercice" class="pDeleteSentiment"/>
+        <button type="button" id="deleteSentiment" class="pDeleteSentiment btn btn-lg btn-block btn-success"> Supprimer le sentiment</button>
+    </div>
     
     <div id="pLogin">
         <input type="text" name="user" id="userLogin" placeholder="Login" class="pLogin"/>
