--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
 	<div class="navbar-header">
-	  <a class="navbar-brand" href="#">CoachYourEmotions</a>
+	  <a class="navbar-brand" onclick="window.location.reload() href="#">CoachYourEmotions</a>
 	</div>
 	
 	<ul class="nav navbar-nav">
