--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -173,7 +173,7 @@
 	<input type="text" name="user" id="userLogin" placeholder="Login" class="pLogin"/>
 	<input type="password" name="password" id="passwdLogin" placeholder="Mot de Passe" class="pLogin"/>
 	<br/>
-	<button id="login" class="pLogin">Login</button>
+	<button id="bLogin" class="pLogin">Login</button>
 	<br/>
       </div>
     </center>
@@ -181,33 +181,33 @@
     <center>
       <div class="pSign">
 	<h1>Utilisateur :</h1>
-	<input type="text" name="userdb" id="user" placeholder="Nom ?" class="pSign"/>
-	<input type="text" name="user" id="alias" placeholder="Surnom ?" class="pSign"/>
+	<input type="text" name="user" id="user" placeholder="Nom ?" class="pSign"/>
+	<input type="text" name="alias" id="alias" placeholder="Surnom ?" class="pSign"/>
 	<input type="text" name="email" id="email" placeholder="Email ?" class="pSign"/>
-	<input type="password" name="user" id="passwd" placeholder="Mot de passe ?" class="pSign"/>
+	<input type="password" name="passwd" id="passwd" placeholder="Mot de passe ?" class="pSign"/>
+	<button type="button" id="bSign" class="pSign">S'enregistrer</button>
       </div>
     </center>
     
+        <div class="pAffiche">
+          <div class="pAffiche">Réponse</div>
+          <div class="pAffiche" id="reponse">
+          </div>
+        </div>
+    
     <script type="text/javascript">
       $(document).ready(function() {
-      $("#get").click(function () {
-      getUser($('#user').val(), $('#alias').val())
-      });
-      $("#post").click(function () {
-      postUser(
-      $('#user').val(),
-      $('#alias').val(),
-      $('#email').val(),
-      $('#passwd').val())});
-      $("#list").click(function () {
-      listUsers()
-      });
-      $("#login").click(function () {
-      login();
-      });
-      $("#profile").click(function () {
-      profile()
-      });
+      	$("#bLogin").click(function () {
+      		login();
+      	});
+      	$("#bSign").click(function () {
+            postUser(
+            	$('#user').val(),
+            	$('#alias').val(),
+            	$('#email').val(),
+            	$('#passwd').val()
+           	)
+        });
       });
     </script>
 
