--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -16,7 +16,27 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-inverse">
+  <!-- Page d'accueil -->
+  <h1 id="accueil"> Coach Your Emotions <h1>
+  <img id="logoAccueil" src="ressource/Croquis.jpg" alt="Logo" />
+  <br>
+  <p id="description"> Ici sera la description Dum apud Persas, ut supra narravimus, perfidia regis motus agitat insperatos, et in eois tractibus bella rediviva consurgunt, anno sexto decimo et eo diutius post Nepotiani exitium, saeviens per urbem aeternam urebat cuncta Bellona, ex primordiis minimis ad clades excita luctuosas, quas obliterasset utinam iuge silentium! ne forte paria quandoque temptentur, plus exemplis generalibus nocitura quam delictis.</p>
+  <ul id="menuHorizontal">
+    <li><input type="button" class="ressource" value="Ressource"></li>
+    <li><input type="button" class="exercer" value="S'exercer"></li>
+    <li><input type="button" class="espace" value="Mon espace"></li>
+  </ul>
+  <!-- Fin page d'accueil -->
+
+  <!-- NavBar Vertical -->
+    <ul id="menuVertical">
+      <li><a href="#" class="ressource">Ressource</a></li>
+      <li><a href="#" class="exercer">S'exercer</a></li>
+      <li><a href="#" class="espace">Mon espace</a></li>
+    </ul>
+  <!-- Fin NavBar -->
+
+   <!-- <nav class="navbar navbar-inverse">
       <div class="container-fluid">
 	<div class="navbar-header">
 	  <a class="navbar-brand" href="#">CoachYourEmotions</a>
@@ -35,7 +55,7 @@
 	</ul>
 
       </div>
-    </nav> 
+    </nav> -->
 
 
     <div id="accordeon">
