--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 	<li><a href="#" class="ressource">Ressource</a></li>
 	<li><a href="#" class="exercer">S'exercer</a></li>
 	<li><a href="#" class="espace">Mon espace</a></li>
+	<li><a href="#" id="AjoutAdmin">Admin</a></li>
       </ul>
     </div>
 
