Ajout delete + liste des données pour ADMIN

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -164,7 +164,7 @@
       <button type="button" id="AjoutBesoin" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Ajouter un besoin</button>
       <button type="button" id="AjoutExercice" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Ajouter un exercice </button>
       <button type="button" id="AjoutQuestion" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Ajouter une question </button>
-      <button type="button" id="DeleteSentiment" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Ajouter un sentiment </button>
+      <button type="button" id="DeleteSentiment" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Supprimer un sentiment </button>
       <button type="button" id="DeleteBesoin" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Supprimer un besoin </button>
       <button type="button" id="DeleteExercice" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Supprimer un Exercice </button>
       <button type="button" id="DeleteQuestion" class="pAjoutAdmin btn btn-lg btn-block btn-success"> Supprimer une question </button>
@@ -216,6 +216,23 @@
       <input type="text" name="questiondb" id="idQuestion" placeholder="Numéro de la question" class="pDeleteQuestion"/>
       <button type="button" id="dQuestion" class="pDeleteQuestion btn btn-lg btn-block btn-success"> Supprimer la question</button>
     </div>
+
+
+	<section class="pListeSentiment">
+		<div id="listeSentiment" class="pDeleteSentiment"></div>
+	</section>
+	
+	<section class="pListeBesoin">
+		<div id="listeBesoin" class="pDeleteBesoin"></div>
+	</section>
+
+	<section class="pListeExercice">
+		<div id="listeExercice" class="pDeleteExercice"></div>
+	</section>
+
+	<section class="pListeQuestion">
+		<div id="listeQuestion" class="pDeleteQuestion"></div>
+	</section>
 
 
     <center>
