design bouton exo

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -18,7 +18,12 @@
   <body>
     <!-- Page d'accueil -->
     <h1 id="accueil">Coach Your Emotions</h1>
-    <h1 id="page">Coach Your Emotions</h1>
+    <nav class="navbar navbar-inverse">
+	 <div class="container-fluid">
+	   <div class="navbar-header">
+	     <a id="btnMenu" class="navbar-brand" href="http://localhost:8080">CoachYourEmotions</a>
+	   </div>
+    </nav> 
     <img id="logoAccueil" src="ressource/croquis.png" alt="Logo" />
     <img id="logoPage" src="ressource/croquis.png" alt="Logo" />
     <br>
@@ -51,20 +56,6 @@
 	   <div class="navbar-header">
 	     <a class="navbar-brand" href="#">CoachYourEmotions</a>
 	   </div>
-
-	   <ul class="nav navbar-nav">
-	     <li id="ressource"><a href="#">Ressource</a></li>
-	     <li id="exercer"><a href="#">S'exercer</a></li>
-	     <li id="espace"><a href="#">Mon espace</a></li>
-	     <li id="AjoutAdmin"><a href="#">EspaceAdmin</a></li>
-	   </ul>
-
-	   <ul class="nav navbar-nav navbar-right">
-	     <li id="sign"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-	     <li id="login"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-	   </ul>
-
-	 </div>
     </nav> -->
 
 
