--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -255,8 +255,8 @@
 
     <div id="partage">
       <ul id="reseaux">
-    	<li><img src="ressource/facebook.png" alt="facebook"/></li>
-    	<li><img src="ressource/twitter.png" alt="twitter"/></li>
+    	<li><a href="https://www.facebook.com/sharer/sharer.php?u=51.255.131.197"><img src="ressource/facebook.png" alt="facebook"/></a></li>
+    	<li><a href="https://www.twitter.com/intent/tweet/?url=51.255.131.197&text=Merci de partagez !"><img src="ressource/twitter.png" alt="twitter"/></a></li>
       </ul>
     </div>
     
